--- a/public/locales/ENG/translation.json
+++ b/public/locales/ENG/translation.json
@@ -38,5 +38,6 @@
 "contact":{
     "emailtext":"EMAIL",
     "emailTitle":"abigail@nahualiart.com",
-    "wahtsapptext":"+52 3326 3145 60",
+    "wahtsapptext":"WHATSAPP",
+    "whatsappTitle":"+52 3326 3145 60",
 }
