--- a/public/locales/ESP/translation.json
+++ b/public/locales/ESP/translation.json
@@ -37,5 +37,6 @@
 "contact":{
     "emailtext":"EMAIL",
     "emailTitle":"abigail@nahualiart.com",
-    "wahtsapptext":"+52 3326 3145 60",
+    "wahtsapptext":"WHATSAPP",
+    "whatsappTitle":"+52 3326 3145 60",
 }
